added a popup menu top control expand,collapse, un-pin

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,13 @@
    <p>Initializing Visualization</p>
    <%= image_tag("spinner.gif") %>
 </div>
+<div id="menu">
+   <ul>
+      <li id="unpin">Unpin</li>
+      <li id="collapse">Collapse</li>
+      <li id="expand">Expand</li>
+      <li id="format">Format</li>
+      <li id="discipline">Discipline</li>
+      <li id="genre">Genre</li>
+   </ul>
+</div>
