--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -43,3 +43,30 @@
    stroke: #666;
    stroke-width: 1.5px;
 }
+
+#menu {
+  color: black;
+  background-color: #f5f5f5;
+  border: 1px solid #888;
+  width: 100px;
+  padding: 0px;
+  border-radius: 10px;
+  font-size: 0.9em;
+  font-weight: 100;
+  box-shadow: 2px 2px 10px #999;
+  position: absolute;
+  display: none;
+  cursor: default;
+
+  ul {
+    list-style: none;
+    padding: 0px 16px;
+  }
+  li {
+    &:hover {
+      font-weight: bold;
+        background-color: #ddf;
+        cursor:pointer;
+    }
+  }
+}
