work on popup info for nodes & menu

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,9 @@
    <p>Initializing Visualization</p>
    <%= image_tag("spinner.gif") %>
 </div>
+
 <div id="menu">
+   <p>Menu</p>
    <ul>
       <li id="unpin">Unpin</li>
       <li id="collapse">Collapse</li>
@@ -11,4 +13,17 @@
       <li id="discipline">Discipline</li>
       <li id="genre">Genre</li>
    </ul>
+</div>
+
+<div id="info">
+   <table>
+      <tr>
+         <td class="label">Title:</td>
+         <td class="title">Fake</td>
+      </tr>
+      <tr>
+         <td class="label">Size:</td>
+         <td class="size">14209</td>
+      </tr>
+   </table>
 </div>
