--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -44,13 +44,34 @@
    stroke-width: 1.5px;
 }
 
+#info {
+  background-color: #f5f5e5;
+  padding: 5px;
+  border: 1px solid #773;
+  width: 200px;
+  font-size: 0.8em;
+  border-radius: 5px;
+  box-shadow: 1px 1px 8px #888;
+  position: absolute;
+  display: none;
+  cursor: default;
+  pointer-events:none;
+  table {
+    border-collapse: collapse;
+  }
+  td.title, td.size {
+    line-height: 1.15em;
+    padding-left: 10px;
+  }
+}
+
 #menu {
   color: black;
   background-color: #f5f5f5;
   border: 1px solid #888;
   width: 100px;
   padding: 0px;
-  border-radius: 10px;
+  border-radius: 0 0 4px 4px;
   font-size: 0.9em;
   font-weight: 100;
   box-shadow: 2px 2px 10px #999;
@@ -58,9 +79,19 @@
   display: none;
   cursor: default;
 
+  p {
+    margin: 0px;
+    border-bottom: 1px solid #999;
+    font-size: 0.9em;
+    text-align: center;
+    background-color: #dedede;
+  }
+
   ul {
     list-style: none;
-    padding: 0px 16px;
+    padding: 0px;
+    margin: 8px 10px;
+    font-size: 0.8em;
   }
   li {
     &:hover {
