--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
       <li id="unpin">Unpin</li>
       <li id="collapse">Collapse</li>
       <li id="expand">Expand</li>
-      <li id="format">Format</li>
+      <li id="doc_type">Format</li>
       <li id="discipline">Discipline</li>
       <li id="genre">Genre</li>
    </ul>
