--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,22 @@
 </div>
 
 <div id="menu">
-   <p>Menu</p>
+   <div class="titlebar">
+      <span>Node Menu</span>
+      <%= image_tag "close.png" %>
+   </div>
+   <div id="info">
+      <table>
+         <tr>
+            <td class="label" id="title-label">Title:</td>
+            <td class="title">Fake</td>
+         </tr>
+         <tr>
+            <td class="label">Size:</td>
+            <td class="size">14209</td>
+         </tr>
+      </table>
+   </div>
    <ul>
       <li id="unpin">Unpin</li>
       <li id="collapse">Collapse</li>
@@ -13,17 +28,4 @@
       <li id="discipline">Discipline</li>
       <li id="genre">Genre</li>
    </ul>
-</div>
-
-<div id="info">
-   <table>
-      <tr>
-         <td class="label">Title:</td>
-         <td class="title">Fake</td>
-      </tr>
-      <tr>
-         <td class="label">Size:</td>
-         <td class="size">14209</td>
-      </tr>
-   </table>
 </div>
