better formatting on menu popup. can now clear expanded facet nodes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
             <td class="title">Fake</td>
          </tr>
          <tr>
-            <td class="label">Size:</td>
+            <td class="label">Count:</td>
             <td class="size">14209</td>
          </tr>
       </table>
