wait spinner and fixes to menu behavior

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,14 @@
    <%= image_tag("spinner.gif") %>
 </div>
 
+<div id="working">
+   <%= image_tag("loader.gif", :id=>"wait-spinner") %>
+   <p id="wait-title" style="text-align: center;">
+      Please Wait...
+   </p>
+</div>
+
+
 <div id="menu">
    <div class="titlebar">
       <span>Node Menu</span>
