beginnings of search. fixes to pan zoom... works better and can zoom out. added recenter button

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -139,6 +139,17 @@
   }
 }
 
+div.search {
+  float: right;
+  input[type=text] {
+    width: 250px;
+  }
+  input[type=button] {
+    position: relative;
+    top: -1px;
+  }
+}
+
 #dim-overlay {
    z-index: 1000;
    display: none;
