--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
 
 <div id="site-header">
    ARC Catalog Visualization
+   <div class="search">
+      <input id="query" type="text" />
+      <input id="search" type="button" value="Search"/>
+      <input id="reset" type="button" value="Reset"/>
+      <input id="recenter" type="button" value="Recenter"/>
+   </div>
+   <div style="clear: both"></div>
 </div>
 
 <div id="main-content">
