--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,13 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #wait {
-  border: 1px solid #666;
+  border: 1px solid black;
   border-radius: 10px;
   padding: 25px;
   width: 170px;
   text-align: center;
   margin: 4% auto;
-  box-shadow: 3px 3px 10px #888;
+  box-shadow: 3px 3px 10px black;
+  background-color: white;
 
   p {
     margin: 0 0 15px 0;
@@ -21,8 +22,8 @@
 
 .node {
    cursor: pointer;
-   stroke: #000;
-   stroke-width: 1.5px;
+   stroke: #059;
+   stroke-width: 2px;
 }
 
 .leaf {
@@ -30,11 +31,14 @@
 }
 
 .leaf.no-data {
+  stroke: rgba(100,100,175,0.7);
   fill: rgba(100,100,175,0.7);
 }
 
 .parent {
+  stroke: #333;
   fill: #dedede;
+  stroke-width: 2.5px;
 }
 
 .root {
@@ -45,17 +49,16 @@
 
 .fixed {
   cursor: pointer;
-  stroke: #a30;
+  stroke: black;
   stroke-width: 4px;
-  stroke-dasharray: 7;
-  stroke-linecap: square;
+
 }
 
 .menu {
   cursor: pointer;
-  stroke: #a0a;
+  stroke: #a2a;
   stroke-width: 4px;
-  fill: #ece;
+  fill: #dad;
 }
 
 .parent.collapsed {
@@ -71,13 +74,13 @@
 #menu {
   color: black;
   background-color: #f5f5f5;
-  border: 1px solid #888;
+  border: 1px solid black;
   width: 225px;
   padding: 0px;
   border-radius: 2px 2px 5px 5px;
   font-size: 0.9em;
   font-weight: 100;
-  box-shadow: 0px 0px 15px #444;
+  box-shadow: 0px 0px 15px black;
   position: absolute;
   display: none;
   cursor: default;
@@ -156,7 +159,7 @@ div.search {
    width: 100%;
    height: 100%;
    position: fixed;
-   background-color: rgba(128, 128, 128, 0.5);
+   background-color: rgba(64, 64, 64, 0.5);
    top: 0%;
    left: 0%;
 }
@@ -173,13 +176,8 @@ div.search {
    left: 50%;
    margin-left: -100px;
    z-index: 1001;
-   box-shadow: 0 0 40px 10px #666;
-   -webkit-box-shadow: 0 0 40px 10px #666;
-   -moz-box-shadow: 0 0 40px 10px #666;
-   border: 3px solid #555;
-   border-radius: 10px;
-   -moz-border-radius: 10px;
-   -webkit-border-radius:  10px;
+   box-shadow: 3px 3px 10px black;
+   background-color: white;
    font-size: 0.85em;
    font-weight: 200;
    #wait-spinner {
