better pin/unpin behavior

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,7 @@
       </table>
    </div>
    <ul>
+      <li id="pin">Pin</li>
       <li id="unpin">Unpin</li>
       <li id="collapse">Collapse</li>
       <li id="expand">Expand</li>
