--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,6 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+#site-header {
+   font-size: 1.2em;
+   padding: 5px 10px;
+   border-bottom: 2px solid #999;
+   background-color: #f5f5f5;
+   color: #444;
+   font-weight: bold;
+   span {
+      margin-top: 20px;
+     display: inline-block;
+     font-size: 1.4em;
+     margin-left: 10px;
+   }
+}
+
 #wait {
   border: 1px solid black;
   border-radius: 10px;
@@ -143,13 +159,25 @@
 }
 
 div.search {
+  text-align: right;
   float: right;
   input[type=text] {
     width: 250px;
+    margin-right: 5px;
   }
   input[type=button] {
     position: relative;
     top: -1px;
+    width: 65px;
+  }
+  label {
+    font-size: 0.65em;
+    color: #666;
+    font-weight: bolder;
+    margin-right: 5px;
+  }
+  input[type=text].date-field {
+    width: 50px;
   }
 }
 
