--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,12 +29,13 @@
       </table>
    </div>
    <ul>
-      <li id="pin">Pin</li>
-      <li id="unpin">Unpin</li>
-      <li id="collapse">Collapse</li>
-      <li id="expand">Expand</li>
-      <li id="doc_type">Format</li>
-      <li id="discipline">Discipline</li>
-      <li id="genre">Genre</li>
+      <li id="pin"><span class="padded">Pin</span></li>
+      <li id="unpin"><span class="padded">Unpin</span></li>
+      <li id="collapse"><span class="padded">Collapse</span></li>
+      <li id="expand"><span class="padded">Expand</span></li>
+      <hr/>
+      <li id="doc_type"><input type="checkbox"><span>Format</span></li>
+      <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
+      <li id="genre"><input type="checkbox"><span>Genre</span></li>
    </ul>
 </div>
