--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -105,12 +105,25 @@
     padding: 1px 1px 3px 5px;
     border-bottom: 1px solid #777;
     background-color: #ddd;
-    img {
-      float: right;
-      cursor: pointer;
-      margin: 1px;
-      &:hover {
-        box-shadow: 0px 0px 5px 2px #8cf;
+    .button-group {
+      float:right;
+
+      img {
+        cursor: pointer;
+        margin: 1px;
+        &:hover {
+          box-shadow: 0px 0px 5px 2px #8cf;
+        }
+      }
+
+      .pinned {
+        border: 1px inset;
+        background-color: #ccc;
+        box-shadow: inset 0 0 5px #444;
+        margin: 0;
+        &:hover {
+          box-shadow: inset 0 0 5px #8cf;
+        }
       }
     }
   }
