--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,16 @@
 <body>
 
 <div id="site-header">
-   <span>ARC Catalog Visualization</span>
+   <div id="left-header">
+      <p>ARC Catalog Visualization</p>
+      <div id="key">
+         <span class="key">Key:</span>
+         <label>Resource</label><span class="block resource"></span>
+         <label>Genre</label><span class="block genre"></span>
+         <label>Discipline</label><span class="block discipline"/></span>
+         <label>Format</label><span class="block format"/></span>
+      </div>
+   </div>
    <div class="search">
       <div>
          <label for="query">Search:</label><input id="query" type="text" placeholder="Search Terms"/>
