--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
-<div id="wait">
-   <p>Initializing Visualization</p>
-   <%= image_tag("spinner.gif") %>
+<div id="wait-container">
+   <div id="wait">
+      <p>Initializing Visualization</p>
+      <%= image_tag("spinner.gif") %>
+   </div>
 </div>
 
 <div id="working">
