--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
          <label>Format</label><span class="block format"/></span>
       </div>
    </div>
+  <div id="debuglog"></div>
    <div class="search">
       <div>
          <label for="query">Search:</label><input id="query" type="text" placeholder="Search Terms"/>
