--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,8 +39,9 @@
       <li id="collapse"><span class="padded">Collapse</span></li>
       <li id="expand"><span class="padded">Expand</span></li>
       <hr/>
-      <li id="doc_type"><input type="checkbox"><span>Format</span></li>
-      <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
+      <li id="resource"><input type="checkbox"><span>Resource</span></li>
       <li id="genre"><input type="checkbox"><span>Genre</span></li>
+      <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
+      <li id="doc_type"><input type="checkbox"><span>Format</span></li>
    </ul>
 </div>
