facets from non-root archive search are now working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,7 @@
       <li id="collapse"><span class="padded">Collapse</span></li>
       <li id="expand"><span class="padded">Expand</span></li>
       <hr/>
-      <li id="resource"><input type="checkbox"><span>Resource</span></li>
+      <li id="archive"><input type="checkbox"><span>Resource</span></li>
       <li id="genre"><input type="checkbox"><span>Genre</span></li>
       <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
       <li id="doc_type"><input type="checkbox"><span>Format</span></li>
