--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>ARC Catalog Visualization</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <script type="text/javascript" src="/assets/aight.min.js"></script>
   <script>aight.browser.ie8 = true;</script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script type="text/javascript" src="/assets/aight.d3.min.js"></script>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "d3_slider", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
