timeline slider now working properly for dragging ranges

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -84,12 +84,8 @@ footer {
   background-color: #f5f5f5;
   color: #444;
   font-weight: bold;
-  #timeline {
- //     height: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
   height: 62px;
+  overflow: hidden;
 }
 #wait-container {
   position: absolute;
@@ -363,14 +359,14 @@ div.search {
 }
 
 .d3-slider-horizontal {
-  height: .8em;
+  height: 24px;
 }
 
 .d3-slider-range {
   background:#2980b9;
   left:0px;
   right:0px;
-  height: 0.8em;
+  height: 24px;
   position: absolute;
 }
 
@@ -389,13 +385,21 @@ div.search {
 
 .d3-slider-handle {
   position: absolute;
-  width: 1.2em;
-  height: 1.2em;
+  width: 22px;
+  height: 22px;
   border: 1px solid #d3d3d3;
-  border-radius: 4px;
+  border-radius: 16px;
   background: #eee;
   background: linear-gradient(to bottom, #eee 0%, #ddd 100%);
   z-index: 3;
+}
+
+.d3-slider-handle:after {
+  content: "< >";
+  font: bold 13px Arial, sans-serif;
+  vertical-align: text-top;
+  margin-left: 1.5px;
+  line-height: 23px;
 }
 
 .d3-slider-handle:hover {
@@ -403,7 +407,7 @@ div.search {
 }
 
 .d3-slider-horizontal .d3-slider-handle {
-  top: -.3em;
+  top: 0;
   margin-left: -.6em;
 }
 
@@ -413,7 +417,7 @@ div.search {
 }
 
 .d3-slider-axis-bottom {
-  top: .8em;
+  top: 24px;
 }
 
 .d3-slider-axis-right {
