--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -380,9 +380,13 @@ div.search {
   overflow: visible;
   font-size: 16px;
 }
+#d3-slider-end-display {
+  margin-left: 15px;
+}
 #d3-slider-start-display {
   text-align: right;
-  margin-left: -28px;
+  margin-left: -94px;
+  width: 100px;
 }
 
 #d3-slider-range-display {
