fix for showing/hiding full results button in menu

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
       <li id="unpin"><span class="padded">Unpin</span></li>
       <li id="collapse"><span class="padded">Collapse</span></li>
       <li id="expand"><span class="padded">Expand</span></li>
-      <li id="results"><span class="padded">Full Results</span></li>
+      <li id="full-results"><span class="padded">Full Results</span></li>
       <hr/>
       <li id="archive"><input type="checkbox"><span>Resource</span></li>
       <li id="genre"><input type="checkbox"><span>Genre</span></li>
