--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -113,9 +113,9 @@ footer {
 }
 
 .node {
-   cursor: pointer;
+  cursor: pointer;
 //   stroke: #059;
-   stroke-width: 1px;
+  stroke-width: 1px;
 }
 .node > text {
   fill: white;
@@ -188,11 +188,12 @@ footer {
 }
 
 .link.fixed {
-  stroke: #888;
   stroke-width: 4px;
+  stroke: white;
 }
 .fixed {
   stroke: #888;
+  filter: url(#drop-shadow)
 }
 .fixed.resource {
   fill: url(#gradient-resource-fixed);
@@ -554,7 +555,7 @@ div.search {
 }
 
 .tab-links li {
-  margin:0px 5px;
+  margin:0px 1px;
   float:left;
   list-style:none;
 }
@@ -576,11 +577,11 @@ div.search {
 }
 
 li.selected a, li.selected a:hover {
-  background:#fff;
+  background:#f5f5f5;
   color:black;
   font-size:14px;
   font-weight: bold;
-  margin-top: -3px;
+  margin-top: -2px;
 }
 
 .tab {
