--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,8 @@
       <li id="full-results"><span class="padded">Full Results</span></li>
       <li id="pin"><span class="padded">Pin</span></li>
       <li id="unpin"><span class="padded">Unpin</span></li>
+      <li id="trace"><span class="padded">Trace Path</span></li>
+      <li id="untrace"><span class="padded">Untrace Path</span></li>
       <li id="collapse"><span class="padded">Collapse</span></li>
       <li id="expand"><span class="padded">Expand</span></li>
       <hr/>
